--- a/package.json
+++ b/package.json
@@ -11,11 +11,35 @@
   "dependencies": {
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
+    "i18next": "^22.0.6",
     "react": "18.1.0",
+    "react-i18next": "^12.0.0",
     "react-native": "0.70.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.3",
+    "@types/react": "^18.0.25",
+    "@types/react-native": "^0.70.7",
+    "@types/react-test-renderer": "^18.0.0",
+    "typescript": "^4.9.3",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "expo-constants": "~14.0.2",
+    "expo-device": "~5.0.0",
+    "expo-notifications": "~0.17.0",
+    "native-notify": "^3.0.2",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-vector-icons": "^9.2.0",
+    "expo": "~47.0.8",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-native": "0.70.5", 
+    "react-native-web": "~0.18.9",
+    "react-dom": "18.1.0",
+    "@expo/webpack-config": "^0.17.2"
   },
   "private": true
 }
