--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
     "expo": "~47.0.8",
     "expo-constants": "~14.0.2",
     "expo-device": "~5.0.0",
+    "expo-localization": "~13.0.0",
     "expo-notifications": "~0.17.0",
     "expo-status-bar": "~1.4.2",
-    "i18next": "^22.0.6",
+    "i18n-js": "^3.9.2",
     "native-notify": "^3.0.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-i18next": "^12.0.0",
     "react-native": "0.70.5",
-    "react-native-i18n": "^1.0.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
